ecmascript/parser/tests/test262-error-references/fail/665ab370012f20cf.js.stderr
error: Declaration is now allowed
 --> $DIR/tests/test262-parser/fail/665ab370012f20cf.js:1:12
  |
1 | with(true) function a(){}
  |            ^^^^^^^^

